Bug 411852 - Glitch in an aPNG image rendering and tab thumbnail. r=stuart, a1.9=beltzner