modules/libpr0n/decoders/png/nsPNGDecoder.cpp
@@ -185,7 +185,7 @@ void nsPNGDecoder::EndImageFrame()
     // Tell the image renderer that the frame is complete
     PRInt32 width, height;
     mFrame->GetWidth(&width);
-    mFrame->GetWidth(&height);
+    mFrame->GetHeight(&height);
 
     nsIntRect r(0, 0, width, height);
     nsCOMPtr<nsIImage> img(do_GetInterface(mFrame));
